added route to check if token is pexired
