# src/routes/recoveryPassword.ts
@@ -5,17 +5,22 @@ import uploadConfig from '../config/multer';
 import isNotLogged from '../middlewares/isNotLogged';
 import { validateEmail,validatePassword } from '../middlewares/validatorInput';
 import { regularlCondicionalRoutes } from '../middlewares/condicionalRoutes';
-import { passwordRecoveryConfirmationController, passwordRecoveryController } from '../controllers/email/passwordRecoveryController';
+import { checkTokenPasswordRecoveryController, passwordRecoveryConfirmationController, passwordRecoveryController } from '../controllers/email/passwordRecoveryController';
 import { confirmationLimit, emailLimit } from '../security/requestLimit';
 
 const recoveryPasswordRoute = Router();
 
 const upload = multer(uploadConfig.upload());
 
-recoveryPasswordRoute.post('/recuperacao/senha', regularlCondicionalRoutes, emailLimit,isNotLogged, upload.none(), validateEmail, (req: Request, res: Response) => {
+recoveryPasswordRoute.post('/recuperacao/senha', regularlCondicionalRoutes, emailLimit, isNotLogged, upload.none(), validateEmail, (req: Request, res: Response) => {
     passwordRecoveryController(req, res);
     return;
 });
+
+recoveryPasswordRoute.get('/recuperacao/senha/:hash', regularlCondicionalRoutes, confirmationLimit, isNotLogged, upload.none(), (req: Request, res: Response) => {
+    checkTokenPasswordRecoveryController(req, res);
+    return;
+})
 
 recoveryPasswordRoute.put('/recuperacao/senha/:hash', regularlCondicionalRoutes, confirmationLimit, isNotLogged, upload.none(), validatePassword, (req: Request, res: Response) => {
     passwordRecoveryConfirmationController(req, res);
